[ADD] fixes dashboard layout issues across all views

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -103,3 +103,10 @@
   font-weight: bold !important;
   color: $pg-btn-green;
 }
+
+.dashboard-video-thumbnail {
+  background-image: var(--videoThumbnailUrl);
+  background-position: center, center;
+  background-repeat: no-repeat, no-repeat;
+  background-size: cover;
+}
